--- a/style.css
+++ b/style.css
@@ -135,7 +135,8 @@ button:hover { background: #f0f0f0; }
 .page canvas {
   width: 100%;
   height: 100%;
-  object-fit: contain; /* Đảm bảo nội dung không bị méo */
+  object-fit: fill; /* Đảm bảo nội dung không bị méo */
+  display: block;
 }
 
 /* Hiệu ứng loading cho từng trang */
@@ -145,4 +146,8 @@ button:hover { background: #f0f0f0; }
   transform: translate(-50%, -50%);
   color: #999;
   font-size: 14px;
+}
+.page-blank {
+  background-color: white !important;
+  border: none !important; /* Bỏ viền cho đẹp */
 }
